Recover from the mismatching start/end even count which may happen when we continue parsing an invalid document (XERCESC-1919).

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/branches/xerces-3.1@935358 13f79535-47bb-0310-9956-ffa450edef68